--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
         
         <!-- CSS File -->
-        <link rel="stylesheet" href="dist/style.css?cb=1572492103778">
+        <link rel="stylesheet" href="dist/style.css?cb=1652496304034">
     </head>
     <body>
 
         <main>
-            <section class="content">
+            <section class="content"></section>
                 <h1>Front-end Boilerplate</h1>
                 <h2>Using Sass and Gulp</h2>
 
@@ -47,6 +47,6 @@
         </main>
 
         <!-- JavaScript File -->
-        <script src="dist/all.js?cb=1572492103778"></script>
+        <script src="dist/all.js?cb=1652496304034"></script>
     </body>
 </html>
